# nvme-mi

./: CMakeLists.txt  CMakeLists.txt.in  README.md  binding_context.cpp  binding_context.hpp  change_param.hpp  constants.hpp  drive.cpp  drive.hpp  main.cpp  meson.build  meson_options.txt  numeric_sensor.cpp  numeric_sensor.hpp  threshold.hpp  threshold_helper.cpp  threshold_helper.hpp
protocol/: mi_msg.hpp  mi_rsp.hpp  nvme_msg.hpp  nvme_rsp.hpp
protocol/admin/: admin_cmd.hpp  admin_rsp.hpp  feature_id.hpp  get_log_page.hpp  identify.hpp
protocol/linux/: crc32c.cpp  crc32c.h
protocol/mi/: controller_hs_poll.hpp  read_nvmemi_ds.hpp  subsystem_hs_poll.hpp
service_files/: xyz.openbmc_project.nvme-mi.service
subprojects/: boost_1_71_0.wrap  gtest.wrap  mctpwplus.wrap  phosphor-logging.wrap  sdbusplus.wrap
subprojects/boost_1_71_0/: meson.build
subprojects/packagefiles/boost_patch/: meson.build
subprojects/packagefiles/mctpwplus_patch/: meson.build
subprojects/packagefiles/phosphor_log_patch/: meson.build
tests/: collectlog_resp_success.hpp  mctp_wrapper.cpp  test_collectlog.cpp  test_create_drive.cpp  test_info.hpp  test_protocol.cpp  test_threshold.cpp
